--- a/autoTurnBook.html
+++ b/autoTurnBook.html
@@ -384,7 +384,6 @@
                         <div class="people-leftHand2"></div>
                         <div class="people-rightHand1"></div>
                         <div class="people-rightHand2"></div>
-                        <div class="people-rightHand1"></div>
                         <div class="people-leftFoot1"></div>
                         <div class="people-leftFoot2"></div>
                         <div class="people-rightFoot1"></div>
@@ -395,19 +394,264 @@
                         <div class="font-I2"></div>
                         <div class="font-I3"></div>
                     </div>
+                    <svg class="font-love-icon font-love" aria-hidden="true">
+                        <use xlink:href="#icon-xin-tianchong"></use>
+                    </svg>
+                </div>
+                <div id="page20" class="page-20">
+                    <div class="people">
+                        <div class="people-header"></div>
+                        <div class="people-body"></div>
+                        <div class="people-leftHand1"></div>
+                        <div class="people-leftHand2"></div>
+                        <div class="people-rightHand1"></div>
+                        <div class="people-rightHand2"></div>
+                        <div class="people-leftFoot1"></div>
+                        <div class="people-leftFoot2"></div>
+                        <div class="people-rightFoot1"></div>
+                        <div class="people-rightFoot2"></div>
+                    </div>
+                    <div class="font-I">
+                        <div class="font-I1"></div>
+                        <div class="font-I2"></div>
+                        <div class="font-I3"></div>
+                    </div>
+                    <svg class="font-love-icon font-love" aria-hidden="true">
+                        <use xlink:href="#icon-xin-tianchong"></use>
+                    </svg>
+                </div>
+                <div id="page21" class="page-21">
+                    <div class="people">
+                        <div class="people-header"></div>
+                        <div class="people-body"></div>
+                        <div class="people-leftHand1"></div>
+                        <div class="people-leftHand2"></div>
+                        <div class="people-rightHand1"></div>
+                        <div class="people-rightHand2"></div>
+                        <div class="people-leftFoot1"></div>
+                        <div class="people-leftFoot2"></div>
+                        <div class="people-rightFoot1"></div>
+                        <div class="people-rightFoot2"></div>
+                    </div>
+                    <div class="font-I">
+                        <div class="font-I1"></div>
+                        <div class="font-I2"></div>
+                        <div class="font-I3"></div>
+                    </div>
+                    <svg class="font-love-icon font-love" aria-hidden="true">
+                        <use xlink:href="#icon-xin-tianchong"></use>
+                    </svg>
+                </div>
+                <div id="page22" class="page-22">
+                    <div class="people">
+                        <div class="people-header"></div>
+                        <div class="people-body"></div>
+                        <div class="people-leftHand1"></div>
+                        <div class="people-leftHand2"></div>
+                        <div class="people-rightHand1"></div>
+                        <div class="people-rightHand2"></div>
+                        <div class="people-leftFoot1"></div>
+                        <div class="people-leftFoot2"></div>
+                        <div class="people-rightFoot1"></div>
+                        <div class="people-rightFoot2"></div>
+                    </div>
+                    <div class="font-I">
+                        <div class="font-I1"></div>
+                        <div class="font-I2"></div>
+                        <div class="font-I3"></div>
+                    </div>
+                    <svg class="font-love-icon font-love" aria-hidden="true">
+                        <use xlink:href="#icon-xin-tianchong"></use>
+                    </svg>
+                </div>
+                <div id="page23" class="page-23">
+                    <div class="people">
+                        <div class="people-header"></div>
+                        <div class="people-body"></div>
+                        <div class="people-leftHand1"></div>
+                        <div class="people-leftHand2"></div>
+                        <div class="people-rightHand1"></div>
+                        <div class="people-rightHand2"></div>
+                        <div class="people-leftFoot1"></div>
+                        <div class="people-leftFoot2"></div>
+                        <div class="people-rightFoot1"></div>
+                        <div class="people-rightFoot2"></div>
+                    </div>
+                    <div class="font-I">
+                        <div class="font-I1"></div>
+                        <div class="font-I2"></div>
+                        <div class="font-I3"></div>
+                    </div>
+                    <svg class="font-love-icon font-love" aria-hidden="true">
+                        <use xlink:href="#icon-xin-tianchong"></use>
+                    </svg>
+                </div>
+                <div id="page24" class="page-24">
+                    <div class="people">
+                        <div class="people-header"></div>
+                        <div class="people-body"></div>
+                        <div class="people-leftHand1"></div>
+                        <div class="people-leftHand2"></div>
+                        <div class="people-rightHand1"></div>
+                        <div class="people-rightHand2"></div>
+                        <div class="people-leftFoot1"></div>
+                        <div class="people-leftFoot2"></div>
+                        <div class="people-rightFoot1"></div>
+                        <div class="people-rightFoot2"></div>
+                    </div>
+                    <div class="font-I">
+                        <div class="font-I1"></div>
+                        <div class="font-I2"></div>
+                        <div class="font-I3"></div>
+                    </div>
+                    <svg class="font-love-icon font-love" aria-hidden="true">
+                        <use xlink:href="#icon-xin-tianchong"></use>
+                    </svg>
+                </div>
+                <div id="page25" class="page-25">
+                    <div class="people">
+                        <div class="people-header"></div>
+                        <div class="people-body"></div>
+                        <div class="people-leftHand1"></div>
+                        <div class="people-leftHand2"></div>
+                        <div class="people-rightHand1"></div>
+                        <div class="people-rightHand2"></div>
+                        <div class="people-leftFoot1"></div>
+                        <div class="people-leftFoot2"></div>
+                        <div class="people-rightFoot1"></div>
+                        <div class="people-rightFoot2"></div>
+                    </div>
+                    <div class="font-I">
+                        <div class="font-I1"></div>
+                        <div class="font-I2"></div>
+                        <div class="font-I3"></div>
+                    </div>
+                    <svg class="font-love-icon font-love" aria-hidden="true">
+                        <use xlink:href="#icon-xin-tianchong"></use>
+                    </svg>
+                </div>
+                <div id="page26" class="page-26">
+                    <div class="people">
+                        <div class="people-header"></div>
+                        <div class="people-body"></div>
+                        <div class="people-leftHand1"></div>
+                        <div class="people-leftHand2"></div>
+                        <div class="people-rightHand1"></div>
+                        <div class="people-rightHand2"></div>
+                        <div class="people-leftFoot1"></div>
+                        <div class="people-leftFoot2"></div>
+                        <div class="people-rightFoot1"></div>
+                        <div class="people-rightFoot2"></div>
+                    </div>
+                    <div class="font-I">
+                        <div class="font-I1"></div>
+                        <div class="font-I2"></div>
+                        <div class="font-I3"></div>
+                    </div>
+                    <svg class="font-love-icon font-love" aria-hidden="true">
+                        <use xlink:href="#icon-xin-tianchong"></use>
+                    </svg>
+                </div>
+                <div id="page27" class="page-27">
+                    <div class="people">
+                        <div class="people-header"></div>
+                        <div class="people-body"></div>
+                        <div class="people-leftHand1"></div>
+                        <div class="people-leftHand2"></div>
+                        <div class="people-rightHand1"></div>
+                        <div class="people-rightHand2"></div>
+                        <div class="people-leftFoot1"></div>
+                        <div class="people-leftFoot2"></div>
+                        <div class="people-rightFoot1"></div>
+                        <div class="people-rightFoot2"></div>
+                    </div>
+                    <div class="font-I">
+                        <div class="font-I1"></div>
+                        <div class="font-I2"></div>
+                        <div class="font-I3"></div>
+                    </div>
+                    <svg class="font-love-icon font-love" aria-hidden="true">
+                        <use xlink:href="#icon-xin-tianchong"></use>
+                    </svg>
+                </div>
+                <div id="page28" class="page-28">
+                    <div class="people">
+                        <div class="people-header"></div>
+                        <div class="people-body"></div>
+                        <div class="people-leftHand1"></div>
+                        <div class="people-leftHand2"></div>
+                        <div class="people-rightHand1"></div>
+                        <div class="people-rightHand2"></div>
+                        <div class="people-leftFoot1"></div>
+                        <div class="people-leftFoot2"></div>
+                        <div class="people-rightFoot1"></div>
+                        <div class="people-rightFoot2"></div>
+                    </div>
+                    <div class="font-I">
+                        <div class="font-I1"></div>
+                        <div class="font-I2"></div>
+                        <div class="font-I3"></div>
+                    </div>
+                    <svg class="font-love-icon font-love" aria-hidden="true">
+                        <use xlink:href="#icon-xin-tianchong"></use>
+                    </svg>
+                </div>
+                <div id="page29" class="page-29">
+                    <div class="people">
+                        <div class="people-header"></div>
+                        <div class="people-body"></div>
+                        <div class="people-leftHand1"></div>
+                        <div class="people-leftHand2"></div>
+                        <div class="people-rightHand1"></div>
+                        <div class="people-rightHand2"></div>
+                        <div class="people-leftFoot1"></div>
+                        <div class="people-leftFoot2"></div>
+                        <div class="people-rightFoot1"></div>
+                        <div class="people-rightFoot2"></div>
+                    </div>
+                    <div class="font-I">
+                        <div class="font-I1"></div>
+                        <div class="font-I2"></div>
+                        <div class="font-I3"></div>
+                    </div>
+                    <svg class="font-love-icon font-love" aria-hidden="true">
+                        <use xlink:href="#icon-xin-tianchong"></use>
+                    </svg>
+                </div>
+                <div id="page30" class="page-30">
+                    <div class="people">
+                        <div class="people-header"></div>
+                        <div class="people-body"></div>
+                        <div class="people-leftHand1"></div>
+                        <div class="people-leftHand2"></div>
+                        <div class="people-rightHand1"></div>
+                        <div class="people-rightHand2"></div>
+                        <div class="people-leftFoot1"></div>
+                        <div class="people-leftFoot2"></div>
+                        <div class="people-rightFoot1"></div>
+                        <div class="people-rightFoot2"></div>
+                    </div>
+                    <div class="font-I">
+                        <div class="font-I1"></div>
+                        <div class="font-I2"></div>
+                        <div class="font-I3"></div>
+                    </div>
+                    <svg class="font-love-icon font-love" aria-hidden="true">
+                        <use xlink:href="#icon-xin-tianchong"></use>
+                    </svg>
                 </div>
             </div>
             <div class="playBox">
-                <svg class="playBox-icon" id="playBox-last">
+                <svg class="playBox-icon" id="playBox-last" aria-hidden="true">
                     <use xlink:href="#icon-zuofanye-xue"></use>
                 </svg>
-                <svg class="playBox-icon" id="playBox-play">
+                <svg class="playBox-icon" id="playBox-play" aria-hidden="true">
                     <use xlink:href="#icon-bofang"></use>
                 </svg>
-                <svg class="playBox-icon" id="playBox-stop">
+                <svg class="playBox-icon" id="playBox-stop" aria-hidden="true">
                     <use xlink:href="#icon-zanting"></use>
                 </svg>
-                <svg class="playBox-icon" id="playBox-next">
+                <svg class="playBox-icon" id="playBox-next" aria-hidden="true">
                     <use xlink:href="#icon-youfanye-xue"></use>
                 </svg>
             </div>
