--- a/autoTurnBook.html
+++ b/autoTurnBook.html
@@ -1302,6 +1302,10 @@
                         <div class="font-Y2"></div>
                         <div class="font-Y3"></div>
                     </div>
+                    <svg class="font-music-icon font-music" id="font-music" aria-hidden="true">
+                        <use xlink:href="#icon-yinlemusic214"></use>
+                    </svg>
+                    <audio src="./src/xxy.mp3" id="page52-music-audio" loop></audio>
                 </div>
                 <div id="page53" class="page-53">
                     <div class="people">
@@ -1436,37 +1440,21 @@
                     </div>
                 </div>
                 <div id="page57" class="page-57">
-                    <div class="people">
-                        <div class="people-header"></div>
-                        <div class="people-body"></div>
-                        <div class="people-leftHand1"></div>
-                        <div class="people-leftHand2"></div>
-                        <div class="people-rightHand1"></div>
-                        <div class="people-rightHand2"></div>
-                        <div class="people-leftFoot1"></div>
-                        <div class="people-leftFoot2"></div>
-                        <div class="people-rightFoot1"></div>
-                        <div class="people-rightFoot2"></div>
-                    </div>
-                    <div class="font-I">
-                        <div class="font-I1"></div>
-                        <div class="font-I2"></div>
-                        <div class="font-I3"></div>
-                    </div>
-                    <svg class="font-love-icon font-love" aria-hidden="true">
-                        <use xlink:href="#icon-xin-tianchong"></use>
-                    </svg>
-                    <div class="font-W">
-                        <div class="font-W1"></div>
-                        <div class="font-W2"></div>
-                        <div class="font-W3"></div>
-                        <div class="font-W4"></div>
-                    </div>
-                    <div class="font-Y">
-                        <div class="font-Y1"></div>
-                        <div class="font-Y2"></div>
-                        <div class="font-Y3"></div>
-                    </div>
+                    <div class="separate-line separate-line1"></div>
+                    <div class="separate-line separate-line2"></div>
+                    <div class="separate-line separate-line3"></div>
+                    <div class="separate-line separate-line4"></div>
+                    <div class="separate-line separate-line5"></div>
+                    <div class="separate-line separate-line6"></div>
+                    <div class="separate-line separate-line7"></div>
+                    <span class="secret-font secret-font1"></span>
+                    <span class="secret-font secret-font2">我想跑来找你</span>
+                    <span class="secret-font secret-font3">只因为</span>
+                    <span class="secret-font secret-font4">当一个人想和另一个人共度余生</span>
+                    <span class="secret-font secret-font5">真的很希望余生马就能开始</span>
+                    <span class="secret-font secret-font6">难道不是吗</span>
+                    <span class="secret-font secret-font7">情人节快乐</span>
+                    <span class="secret-font secret-font8">你的小可爱</span>
                 </div>
             </div>
             <div class="playBox">
