--- a/autoTurnBook.html
+++ b/autoTurnBook.html
@@ -1448,13 +1448,13 @@
                     <div class="separate-line separate-line6"></div>
                     <div class="separate-line separate-line7"></div>
                     <span class="secret-font secret-font1"></span>
-                    <span class="secret-font secret-font2">我想跑来找你</span>
-                    <span class="secret-font secret-font3">只因为</span>
-                    <span class="secret-font secret-font4">当一个人想和另一个人共度余生</span>
-                    <span class="secret-font secret-font5">真的很希望余生马就能开始</span>
-                    <span class="secret-font secret-font6">难道不是吗</span>
-                    <span class="secret-font secret-font7">情人节快乐</span>
-                    <span class="secret-font secret-font8">你的小可爱</span>
+                    <span class="secret-font secret-font2"></span>
+                    <span class="secret-font secret-font3"></span>
+                    <span class="secret-font secret-font4"></span>
+                    <span class="secret-font secret-font5"></span>
+                    <span class="secret-font secret-font6"></span>
+                    <span class="secret-font secret-font7"></span>
+                    <span class="secret-font secret-font8"></span>
                 </div>
             </div>
             <div class="playBox">
